# reservation_system_tutorial

./: Makefile  README.md  docker-compose.yml
.codex/: instructions.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pbi.md
.github/workflow/: branch_check.yml  python_ci.yml
.github/workflows/: branch_check.yml  frontend_ci.yml  python_ci.yml
backend/: Dockerfile.dev  Makefile  Makefiletmp  README.md  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/domain/: __init__.py  errors.py  repositories.py  services.py
backend/app/infrastructure/: repositories.py
backend/app/routers/: reservations.py  reservations.py.bak  slots.py
backend/app/usecases/: reservations.py  slots.py
backend/app/utils/: audit_log.py  auth.py  request_id.py  time.py
backend/migrations/: 0001_users.sql  seed_dev.sql
backend/tests/: conftest.py  test_sample.py
backend/tests/domain/: test_services.py
backend/tests/routers/: test_auth_bearer.py  test_reschedule_router.py  test_reservations_audit.py  test_slots_auth.py  test_slots_create.py  test_version_extract.py
backend/tests/usecases/: test_reservations.py  test_slots.py
backend/tests/utils/: test_audit_log.py  test_request_id.py
docs/: implementation_plan.md  openapi.yaml
docs/adr/: 0001-reservation-model.md  0002-consistency-and-time.md  0003-reschedule-policy.md  0004-slot-create-api.md  0005-bearer-auth.md  0006-user-reservation-status-filter.md  0007-slots-availability-response.md  0008-reservation-audit-logs.md  0009-frontend-api-client.md  TEMPLATE.md
docs/architecture/: architecture.drawio
docs/design/: adr0002-implementation.md  api-schema.md  frontend-mvp-plan.md  migration-0001.sql  migration-0002.sql  reservation-model-impl.md  slot-availability-dwell-notes.md
docs/er/: README.md
frontend/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/api/: client.test.ts  client.ts
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
