[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kai-5908 <dolce.cantabile.maestoso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
black = "^24.10.0"
mypy = "^1.12.0"
isort = "^5.13.2"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
pyproject-flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 311
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
skip = [
    ".venv",
]

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
)
'''

[tool.flake8]
max-line-length = 119
ignore = [
    "E203", # Whitespace before ':'
    "E266", # Too many leading '#' for block comment
    "W503", # Line break before binary operator
]
exclude = [
    ".venv"
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
