[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kai-5908 <dolce.cantabile.maestoso@gmail.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "app"

[project]
name = "backend"
version = "0.1.0"
description = "Reservation system backend"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi==0.115.2",
    "pydantic==2.9.2",
    "uvicorn==0.32.0",
    "sqlalchemy==2.0.36",
    "aiomysql==0.2.0",
    "python-dotenv==1.0.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.23.8",
    "ruff>=0.14.6",
]
optional-dependencies = { dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.8",
    "black==24.10.0",
    "mypy==1.12.0",
    "isort==5.13.2",
    "pyproject-flake8==7.0.0",
] }

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.2"
pydantic = "2.9.2"
uvicorn = "0.32.0"
sqlalchemy = "2.0.36"
aiomysql = "0.2.0"
python-dotenv = "1.0.1"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-asyncio = "0.23.8"
ruff = "0.14.6"
black = "24.10.0"
mypy = "1.12.0"
isort = "5.13.2"
pyproject-flake8 = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 311
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
skip = [
    ".venv",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 119
target-version = "py311"
src = ["app", "tests"]
exclude = [".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
[tool.pytest.ini_options]
markers = [
    "asyncio: mark async tests",
]
